Fix role image display on smaller screens

--- a/src/components/RoleOverview/style.scss
+++ b/src/components/RoleOverview/style.scss
@@ -194,6 +194,7 @@
       position: absolute;
       top: 0;
       right: 0;
+      max-width: 30%;
       margin-right: 55px;
       padding: 0;
     }
